Prevent navigation links from wrapping below 768px

--- a/css/render.css
+++ b/css/render.css
@@ -646,18 +646,6 @@ note : this will break bootstrap fluid and responsive.css
   min-height: 400px;
 }
 
-@media (max-width: 979px) {
-  #home ul.navi li a {
-    font-size: 12px;
-    padding: .3em;
-    padding-left: .8em;
-  }
-
-  #home .story {
-    padding: 0;
-    margin: 0;
-  }
-}
 
 @media (max-width: 480px) {
   .container {
@@ -683,12 +671,13 @@ note : this will break bootstrap fluid and responsive.css
   }
 
   #home ul.navi li a {
-    padding: 10px;
-    font-size: 16px !important;
+    /*font-size: 16px !important;*/
     display: inline-block;
     border: none;
     text-decoration: underline;
     color: #A00;
+    font-size: 15px !important;
+    padding: 4px;
   }
 
   h1 {
@@ -720,6 +709,17 @@ note : this will break bootstrap fluid and responsive.css
 }
 
 @media (max-width: 979px) {
+  #home ul.navi li a {
+    font-size: 12px;
+    padding: .3em;
+    padding-left: .8em;
+  }
+
+  #home .story {
+    padding: 0;
+    margin: 0;
+  }
+
   h1 {
     font-size: 34px;
     margin-bottom: 0px !important;
